# project-v-ai

./: .env.example  .gitignore  .npmrc  DataPanel.tsx  DeployPanel.tsx  FigmaPanel.tsx  MCPPanel.tsx  README.md  StitchPanel.tsx  conslol logs.txt  consol.txt  figmaProxy.patch.ts  index.html  lt.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vercel.json  vite.config.ts
.agents/rules/: command-run.md
docs/: AI_CONFIGURATION.md  AI_INTEGRATION_COMPLETE.md  HYBRID_AI_ARCHITECTURE.md
public/: test-ai-integration.js
src/: App.tsx  index.css
src/components/: Canvas.tsx  CodeRenderer.tsx  ContainerPreview.tsx  Dashboard.tsx  DeployPanel.tsx  DeviceChrome.tsx  FramePicker.tsx  Header.tsx  ImportModal.tsx  InsertDrawer.tsx  LeftSidebar.tsx  MagicBar.tsx  PublishModal.tsx  RenderNode.tsx  Resizer.tsx  RightSidebar.tsx  shellHtml.ts
src/components/canvas/: Canvas.tsx  CanvasErrorBoundary.tsx  CodeRenderer.tsx  ContainerPreview.tsx  FramePicker.tsx  RenderNode.tsx  Resizer.tsx
src/components/dashboard/: Dashboard.tsx
src/components/layout/: Header.tsx  InsertDrawer.tsx  LeftSidebar.tsx  RightSidebar.tsx
src/components/marketplace/: FeatureHover.tsx  GeometricShapes.tsx  HeroGeometric.tsx
src/components/modals/: AISuccessToast.tsx  ImportModal.tsx  MagicBar.tsx  PublishModal.tsx
src/components/panels/: DataPanel.tsx  DeployPanel.tsx  FigmaPanel.tsx  LayersPanel.tsx  LoaderPanel.tsx  MCPPanel.tsx  StitchPanel.tsx
src/components/ui/: PremiumInputs.tsx  ShortcutsOverlay.tsx  SmartComponents.tsx
src/context/: ContainerContext.tsx  EditorContext.tsx  HoverContext.tsx  ProjectContext.tsx  UIContext.tsx  useContainer.ts
src/data/: constants.ts  fileSystemTemplates.ts  framePresets.ts  iconRegistry.ts  templates.ts
src/hooks/: useAssetSync.ts  useContainer.ts  useFileSync.ts  useWasmEngine.ts
src/lib/: utils.ts
src/services/: aiAgent.ts
src/types/: index.ts
src/utils/: aiHelpers.ts  codeGenerator.ts  db.ts  figmaImporter.ts  figmaProxy.ts  fileSystem.ts  generateThumbnail.ts  importHelpers.ts  mcpServer.ts  tailwindHelpers.ts  templateUtils.ts  treeUtils.ts  vectraLoaderBridge.ts  zipImporter.ts
src/utils/codegen/: codeGenerator.ts  codeSanitizer.ts  shellHtml.ts
src/utils/deploy/: githubPublisher.ts  netlifyDeployer.ts  vercelDeployer.ts
src/utils/figma/: figmaImporter.ts  figmaProxy.ts
src/utils/import/: importHelpers.ts  zipImporter.ts
src/workers/: compiler.worker.ts  history.worker.ts  swc.worker.ts
vectra-engine/: Cargo.toml  build_log.txt
vectra-engine/pkg/: package.json  vectra_engine.d.ts  vectra_engine.js  vectra_engine_bg.wasm  vectra_engine_bg.wasm.d.ts
vectra-engine/src/: ai.rs  codegen.rs  compiler.rs  figma.rs  layout.rs  lib.rs  state.rs  styling.rs  thumbnail.rs
vectra-engine/src-b/: Cargo.toml  lib.rs
