[package]
name = "vectra-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# 1. WASM Core
wasm-bindgen = "0.2"
js-sys = "0.3"

# 2. Serialization (Pinned per your fix)
serde = { version = "=1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"

# 3. Randomness (WASM compatible)
getrandom = { version = "0.3", features = ["wasm_js"] }

# 4. Error Logging
console_error_panic_hook = "0.1.7"

# 5. SWC Compiler (The Engine)
# Strictly disabling default-features to avoid OS dependencies
swc_core = { version = "0.86", default-features = false, features = [
    "common",
    "ecma_parser",
    "ecma_codegen",
    "ecma_visit",
    "ecma_ast",
    "ecma_transforms_react",
    "ecma_transforms_typescript"
] }
