[package]
name    = "vectra-engine"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# ── Release profile — optimised for WASM binary size ─────────────────────────
[profile.release]
opt-level     = "s"    # size-optimised (smaller than "z" for WASM with SWC)
lto           = true
codegen-units = 1
panic         = "abort"

# ── Dependencies ──────────────────────────────────────────────────────────────
[dependencies]
wasm-bindgen       = "0.2"
js-sys             = "0.3"
serde              = { version = "=1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json         = "1.0"
getrandom          = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"

# Compression — history.worker.ts uses LZ4, auto-detects legacy gzip frames
flate2   = { version = "1.0", default-features = false, features = ["rust_backend"] }
lz4_flex = { version = "0.11", default-features = false }

# Spatial hash grid — 2× faster than std HashMap for (i32,i32) keys
ahash = { version = "0.8", default-features = false }

# SWC — TSX→JS compiler (compiler.rs only)
swc_core = { version = "0.86", default-features = false, features = [
    "common",
    "ecma_parser",
    "ecma_codegen",
    "ecma_visit",
    "ecma_ast",
    "ecma_transforms_react",
    "ecma_transforms_typescript",
] }
