[package]
name = "vectra-engine"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level     = "s"
lto           = true
codegen-units = 1
panic         = "abort"

[dependencies]
wasm-bindgen       = "0.2"
js-sys             = "0.3"
serde              = { version = "=1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json         = "1.0"
getrandom          = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"
flate2             = { version = "1.0", default-features = false, features = ["rust_backend"] }
lz4_flex           = { version = "0.11", default-features = false }
ahash              = { version = "0.8", default-features = false }
swc_core           = { version = "0.86", default-features = false, features = [
    "common", "ecma_parser", "ecma_codegen", "ecma_visit",
    "ecma_ast", "ecma_transforms_react", "ecma_transforms_typescript",
] }